--- a/components/PricingPage/PriceContainer/PriceContainer.module.css
+++ b/components/PricingPage/PriceContainer/PriceContainer.module.css
@@ -1,22 +1,85 @@
+.main {
+  display: flex;
+  justify-content: center;
+  margin: calc(var(--space-40)/2) auto var(--space-40) auto;
+}
+
 .title {
-    font-size: rem(52px);
-    font-weight: 900;
-  
-    @media (max-width: $mantine-breakpoint-sm) {
-      font-size: rem(24px);
-    }
+  font-size: var(--title-font-size);
+}
+
+.mainGroup {
+  z-index: 50;
+}
+
+.headerBox {
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  gap: 19;
+}
+
+.moneyTitle {
+  font-size: 50;
+  display: flex;
+  align-items: center;
+  gap: 5;
+}
+
+.cardBox1 {
+  box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
+  height: 36rem;
+  width: 17rem;
+  padding-inline: 1.5rem;
+  border-radius: 0.7rem 0 0 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media (max-width: 755px) {
+    width: 19rem;
+    border-radius: 0.7rem;
   }
-  
-  .description {
-    font-size: rem(21px);
-    max-width: rem(600px);
-    margin: auto;
+  @media (min-width: 756px) and (max-width: 820px) {
+    width: 15rem;
+    border-radius: 0.7rem 0 0 0.7rem;
   }
-  
-  .card {
-    border: rem(1px) solid light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
+}
+
+.cardBox2 {
+  box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
+  height: 42rem;
+  width: 19rem;
+  padding-inline: 1.5rem;
+  background: linear-gradient(to bottom right, hsl(236, 72%, 79%), hsl(237, 63%, 64%));
+  color: white;
+  border-radius: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media (min-width: 756px) and (max-width: 820px) {
+    width: 15rem;
+    border-radius: 0.7rem;
   }
-  
-  .cardTitle {
-    font-size: rem(32px);
+}
+
+.cardBox3 {
+  box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
+  height: 36rem;
+  width: 18rem;
+  padding-inline: 1.5rem;
+  border-radius: 0 0.7rem 0.7rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media (max-width: 755px) {
+    width: 19rem;
+    border-radius: 0.7rem;
   }
+  @media (min-width: 756px) and (max-width: 820px) {
+    width: 15rem;
+    border-radius: 0 0.7rem 0.7rem 0;
+  }
+}
