--- a/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
+++ b/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
@@ -1,15 +1,23 @@
 .title {
-    color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-    text-align: center;
-    font-family:
-      Greycliff CF,
-      var(--mantine-font-family);
-    font-size: rem(44px);
-    line-height: 1.2;
-    font-weight: 900;
-    margin: 3rem 0;
-  
-    @media (max-width: $mantine-breakpoint-xs) {
-      font-size: rem(28px);
-    }
+  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+  text-align: center;
+  font-family:
+    Greycliff CF,
+    var(--mantine-font-family);
+  font-size: rem(44px);
+  line-height: 1.2;
+  font-weight: 900;
+  margin: 3rem 0;
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: rem(28px);
   }
+}
+
+.name {
+  font-size: 24px;
+}
+
+.jobTitle {
+  font-weight: 400;
+}
