--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,6 +3,9 @@
   padding-left: var(--mantine-spacing-md);
   padding-right: var(--mantine-spacing-md);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  display: flex;
+  justify-content: center;
+  background-color: var( --gray);
 }
 
 .link {
@@ -14,7 +17,7 @@
   text-decoration: none;
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
   font-weight: 500;
-  font-size: 15px;
+  font-size: 16px;
 
   @media (max-width: $mantine-breakpoint-sm) {
     height: rem(42px);
@@ -52,4 +55,8 @@
 
 .sublinkDescription {
   font-size: 14px;
+}
+
+.button {
+  font-size: 16px !important;
 }
