--- a/components/Homepage/Feature5/Feature5.module.css
+++ b/components/Homepage/Feature5/Feature5.module.css
@@ -5,7 +5,7 @@
 }
 
 .content {
-  max-width: rem(480px);
+  max-width: 55%;
 
   @media (max-width: $mantine-breakpoint-md) {
     max-width: 100%;
@@ -27,21 +27,20 @@
   }
 }
 
-.description{
+.description {
   font-size: 18px;
 }
 
 .control {
   border-radius: var(--border-radius-sm);
-  margin-top: var(--space-40);
+  margin-top: calc(var(--space-40) / 2);
   @media (max-width: $mantine-breakpoint-xs) {
     flex: 1;
   }
 }
 
 .image {
-  width: rem(376px);
-  height: rem(356px);
+  max-width: 45%;
   margin-right: calc(var(--mantine-spacing-xl) * 3);
 
   @media (max-width: $mantine-breakpoint-md) {
