--- a/components/PricingPage/FeatureCompare/FeatureCompare.module.css
+++ b/components/PricingPage/FeatureCompare/FeatureCompare.module.css
@@ -1,72 +1,28 @@
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
-.section {
-    padding: 20px 0;
-  }
-  
-  .container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  .headerRow {
-    padding: 10px 0;
-    text-align: center;
-  }
-  
-  .headerText {
-    font-weight: bold;
-    font-size: 1.2em;
-  }
+.planTitle {
+  text-align: center;
+  color: var(--white);
+  font-size: 21px;
+  font-weight: 900;
+}
 
-  .headerTextException {
-    font-size: 1.2em;
-    text-align: left;
-  }
-  
-  .featureRow {
-    background-color: #1a2a54;
-    color: #fff;
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-    border: 2px solid transparent;
-    border-radius: 10px;
-    margin-top: .5rem;
-  }
-  
-  .featureHeader {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .featureTitle {
-    font-weight: bold;
-    font-size: 1.2em;
-  }
-  
-  .featureCol {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .row {
-    padding: 10px 0;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  .featureName {
-    display: flex;
-    align-items: center;
-  }
-  
-  .featureCol img {
-    display: block;
-  }
-  
-  .featureCol div {
-    text-align: center;
-  }
-  
+.header {
+  background-color: var(--yellow);
+  padding: calc(var(--space-40) / 2) 0;
+  margin-bottom: calc(var(--space-40) / 2);
+  border-radius: var(--border-radius-md);
+}
+
+.contentTitle {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.bullet {
+  list-style: square;
+}
