--- a/globals.css
+++ b/globals.css
@@ -1,12 +1,12 @@
 :root {
   --black: #000000;
   --white: #ffffff;
-  --gray: #F1F1F1;
-  --yellow: #E8A743;
-  --blue: #1F2236;
-  --text-gray: #C4C6CD;
+  --gray: #f1f1f1;
+  --yellow: #e8a743;
+  --blue: #1f2236;
+  --text-gray: #c4c6cd;
   --border-color: #424453;
-  --title-font-size: 48px;
+  --title-font-size: 46px;
   --subtitle-font-size: 40px;
   --space-40: 40px;
   --border-radius-sm: 5px;
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Work Sans', sans-serif !important;
+  font-family: Sora, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"  !important;
 }
 p,
 a,
@@ -27,5 +27,5 @@ ul,
 ol,
 li,
 span {
-  font-family: 'Roboto', sans-serif !important;
+  font-family: Sora, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"  !important;
 }
