--- a/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
+++ b/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
@@ -1,3 +1,7 @@
+.outer{
+  background-color: var(--gray);
+  padding-bottom: 8rem;
+}
 .title {
   color: var(--blue);
   text-align: center;
@@ -7,7 +11,7 @@
   font-size: rem(44px);
   line-height: 1.2;
   font-weight: 900;
-  margin: 3rem 0;
+  padding: 3rem 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
