--- a/components/AboutUsPage/ValuesSection/ValuesSection.module.css
+++ b/components/AboutUsPage/ValuesSection/ValuesSection.module.css
@@ -1,5 +1,5 @@
-.outer {
-  background-color: lightgray;
+.outer{
+  background-color: var(--gray);
 }
 
 .card {
@@ -26,14 +26,11 @@
 
 .mainTitle {
   color: var(--blue);
-  font-family:
-    Greycliff CF,
-    var(--mantine-font-family);
   font-size: rem(52px);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  margin: 2rem 0 1rem 0;
+  padding: 2rem 0 1rem 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
