--- a/components/CareersPage/IntroSection/IntroSection.module.css
+++ b/components/CareersPage/IntroSection/IntroSection.module.css
@@ -1,3 +1,7 @@
+.outer{
+  background-color: var(--gray);
+}
+
 .mainTitle {
   color: var(--blue);
     font-family:
@@ -7,7 +11,7 @@
     line-height: 1.2;
     font-weight: 900;
     text-align: center;
-    margin: 2rem 0 1rem 0;
+    padding: 2rem 0 1rem 0;
   
     @media (max-width: $mantine-breakpoint-xs) {
       font-size: rem(28px);
@@ -19,5 +23,5 @@
     font-size: rem(21px);
     line-height: 1.5;
     color: var(--mantine-color-black);
-    margin-bottom: var(--mantine-spacing-lg);
+    padding-bottom: var(--mantine-spacing-lg);
   }
