--- a/components/CareersPage/JobsSection/JobsSection.module.css
+++ b/components/CareersPage/JobsSection/JobsSection.module.css
@@ -1,3 +1,7 @@
+.outer{
+  background-color: var(--gray);
+}
+
 .wrapper {
   padding-top: calc(var(--mantine-spacing-xl) * 2);
   padding-bottom: var(--mantine-spacing-xl);
