--- a/components/ContactUsPage/IntroSection/IntroSection.module.css
+++ b/components/ContactUsPage/IntroSection/IntroSection.module.css
@@ -1,5 +1,5 @@
 .outer {
-  background-color: lightgray;
+  background-color: var(--gray);
 }
 
 .card {
@@ -12,25 +12,13 @@
   padding: 0 0 1rem 0;
 }
 
-.tradeName {
-  text-align: center;
-  font-family:
-    Greycliff CF,
-    sans-serif;
-  font-weight: 900;
-  color: var(--mantine-color-black);
-  line-height: 1.2;
-  font-size: rem(28px);
-  margin: var(--mantine-spacing-xs) auto 0 auto;
-}
-
 .mainTitle {
   color: var(--blue);
   font-size: rem(52px);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  margin: 2rem 0 1rem 0;
+  padding: 2rem 0 1rem 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
