--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -15,7 +15,7 @@
   padding-left: var(--mantine-spacing-md);
   margin-right: 5px;
   text-decoration: none;
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+  color: var(--blue);
   font-weight: 500;
   font-size: 16px;
 
