--- a/components/Homepage/Feature5/Feature5.module.css
+++ b/components/Homepage/Feature5/Feature5.module.css
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   padding-bottom: 148px;
+  margin-bottom: -1px !important;
 }
 
 .inner {
