--- a/components/Homepage/PartnersSection/PartnersSection.module.css
+++ b/components/Homepage/PartnersSection/PartnersSection.module.css
@@ -4,8 +4,8 @@
   background-position: 50% 100%;
   background-repeat: no-repeat;
   background-size: 100%;
-  padding-top: 40px;
-  padding-bottom: 148px;
+  padding-bottom: 146px;
+  margin-bottom: -1px !important;
 }
 
 .card {
@@ -20,14 +20,11 @@
 
 .mainTitle {
   color: var(--white);
-  font-family:
-    Greycliff CF,
-    var(--mantine-font-family);
-  font-size: rem(52px);
+  font-size: var(--title-font-size);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  margin: 2rem 0 1rem 0;
+  padding: calc(var(--space-40) * 2) 0 var(--space-40) 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
