--- a/components/OurProcessPage/Step4/Step4.module.css
+++ b/components/OurProcessPage/Step4/Step4.module.css
@@ -1,3 +1,8 @@
+.outer{
+  background-color: var(--gray);
+  padding-bottom: 8rem;
+}
+
 .inner {
   display: flex;
   justify-content: space-between;
