--- a/components/PartnersPage/PartnersSection/PartnersSection.module.css
+++ b/components/PartnersPage/PartnersSection/PartnersSection.module.css
@@ -1,3 +1,8 @@
+.outer {
+  background-color: var(--gray);
+  padding-bottom: 8rem;
+}
+
 .partnerCard {
   display: flex;
   justify-content: center;
