--- a/components/PricingPage/PriceContainer/PriceContainer.module.css
+++ b/components/PricingPage/PriceContainer/PriceContainer.module.css
@@ -1,7 +1,12 @@
+.outer {
+  background-color: var(--gray);
+}
+
 .main {
   display: flex;
   justify-content: center;
-  margin: calc(var(--space-40)/2) auto var(--space-40) auto;
+  margin: 0 auto 0 auto;
+  padding: var(--space-40) 0;
 }
 
 .title {
@@ -18,6 +23,8 @@
   display: flex;
   align-items: center;
   gap: 19;
+  background-color: var(--gray);
+  padding: 0.5rem 0 2rem 0;
 }
 
 .moneyTitle {
@@ -30,7 +37,7 @@
 .cardBox1 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
   height: 36rem;
-  width: 17rem;
+  width: 23rem;
   padding-inline: 1.5rem;
   border-radius: 0.7rem 0 0 0.7rem;
   display: flex;
@@ -50,7 +57,7 @@
 .cardBox2 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
   height: 42rem;
-  width: 19rem;
+  width: 24rem;
   padding-inline: 1.5rem;
   background: var(--yellow);
   color: white;
@@ -68,7 +75,7 @@
 .cardBox3 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
   height: 36rem;
-  width: 18rem;
+  width: 23rem;
   padding-inline: 1.5rem;
   border-radius: 0 0.7rem 0.7rem 0;
   display: flex;
