--- a/components/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialSection/TestimonialSection.module.css
@@ -61,3 +61,37 @@
   height: 100%;
   background-color: var(--white);
 }
+
+.stars {
+  padding-left: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.star {
+  width: rem(22px);
+  height: rem(22px);
+}
+
+.root {
+  margin: 0 3.5rem;
+  .controls {
+    top: calc(50% - 100px / 2);
+    padding: 0;
+    .control {
+      box-shadow: none;
+      opacity: 1;
+      svg {
+        width: 100px !important;
+        height: 100px !important;
+        stroke: var(--yellow);
+      }
+    }
+    .control:nth-of-type(1) {
+      margin-left: -4.5rem;
+    }
+    .control:nth-of-type(2) {
+      margin-right: -4.5rem;
+    }
+  }
+}
