--- a/components/TradesPage/MainTradesSection/MainTradesSection.module.css
+++ b/components/TradesPage/MainTradesSection/MainTradesSection.module.css
@@ -1,5 +1,5 @@
 .outer {
-  background-color: lightgray;
+  background-color: var(--gray);
 }
 
 .card {
@@ -27,7 +27,7 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  margin: 2rem 0 1rem 0;
+  padding: 2rem 0 0 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
