--- a/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
+++ b/components/AboutUsPage/EmployeeSection/EmployeeSection.module.css
@@ -1,17 +1,14 @@
 .outer{
   background-color: var(--gray);
-  padding-bottom: 8rem;
+  padding-bottom: calc(var(--space-40) * 2);
 }
-.title {
+.mainTitle {
   color: var(--blue);
-  text-align: center;
-  font-family:
-    Greycliff CF,
-    var(--mantine-font-family);
-  font-size: rem(44px);
+  font-size: var(--title-font-size);
   line-height: 1.2;
   font-weight: 900;
-  padding: 3rem 0;
+  text-align: center;
+  padding: var(--space-40) 0 ;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
