--- a/components/ContactUsPage/IntroSection/IntroSection.module.css
+++ b/components/ContactUsPage/IntroSection/IntroSection.module.css
@@ -14,11 +14,11 @@
 
 .mainTitle {
   color: var(--blue);
-  font-size: rem(52px);
+  font-size: var(--title-font-size);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: 2rem 0 1rem 0;
+  padding: var(--space-40) 0 0 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
