--- a/components/OurProcessPage/Step1/Step1.module.css
+++ b/components/OurProcessPage/Step1/Step1.module.css
@@ -1,5 +1,6 @@
-.outer{
+.outer {
   background-color: var(--gray);
+  padding-bottom: calc(var(--space-40) * 2);
 }
 
 .inner {
@@ -21,15 +22,12 @@
 
 .title {
   color: var(--blue);
-  font-family:
-    Greycliff CF,
-    var(--mantine-font-family);
-  font-size: rem(44px);
+  font-size: var(--subtitle-font-size);
   line-height: 1.2;
   font-weight: 900;
 
   @media (max-width: $mantine-breakpoint-xs) {
-    font-size: rem(28px);
+    font-size: rem(24px);
   }
 }
 
