--- a/components/TestimonialPage/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialPage/TestimonialSection/TestimonialSection.module.css
@@ -1,6 +1,6 @@
 .outer {
   background-color: var(--gray);
-  padding-bottom: 8rem;
+  padding-bottom: calc(var(--space-40) * 2);
 }
 
 .personName {
@@ -17,23 +17,15 @@
 
 .mainTitle {
   color: var(--blue);
-  font-size: rem(52px);
+  font-size: var(--title-font-size);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: 2rem 0 0 0;
+  padding: var(--space-40) 0 ;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
   }
-}
-
-.description {
-  font-family: var(--mantine-font-family);
-  font-size: rem(21px);
-  line-height: 1.5;
-  color: var(--mantine-color-black);
-  margin-bottom: 1rem;
 }
 
 .video {
