did a bit of responsivness

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -104,3 +104,9 @@
 .button {
   background-color: var(--yellow) !important;
 }
+
+.ctaDiv {
+  @media (max-width: $mantine-breakpoint-sm) {
+    display: none !important;
+  }
+}
