--- a/components/Homepage/WhoWeServeSection/WhoWeServeSection.module.css
+++ b/components/Homepage/WhoWeServeSection/WhoWeServeSection.module.css
@@ -7,6 +7,9 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
+  @media (max-width: $mantine-breakpoint-xs) {
+    padding-bottom: 75px;
+  }
 }
 .card {
   display: flex;
@@ -16,6 +19,12 @@
   background-size: cover;
   background-position: center;
   padding: 0 0 1rem 0;
+  border-radius: 10px;
+  text-align: center;
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    display: block;
+  }
 }
 
 .companyName {
@@ -37,6 +46,7 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: 0 0 var(--space-40) 0;
   }
 }
 
@@ -54,9 +64,16 @@
     border-radius: 10px 10px 0 0;
     width: 100%;
   }
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: calc(100vw - 130px);
+    font-size: rem(28px);
+  }
 }
 .root {
-  margin: 0 2rem;
+  margin: 0 3.5rem;
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin: 0 1.5rem;
+  }
   .controls {
     top: calc(50% - 100px / 2);
     padding: 0;
@@ -67,13 +84,23 @@
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
+        @media (max-width: $mantine-breakpoint-xs) {
+          width: 50px !important;
+          height: 50px !important;
+        }
       }
     }
     .control:nth-of-type(1) {
       margin-left: -4.5rem;
+      @media (max-width: $mantine-breakpoint-xs) {
+        margin-left: -2.5rem;
+      }
     }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
+      @media (max-width: $mantine-breakpoint-xs) {
+        margin-right: -2.5rem;
+      }
     }
   }
 }
