--- a/components/AboutUsPage/IntroSection/IntroSection.module.css
+++ b/components/AboutUsPage/IntroSection/IntroSection.module.css
@@ -8,7 +8,7 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: var(--space-40) 0 ;
+  padding: calc(var(--space-40) * 2) 0 var(--space-40) 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
