--- a/components/CareersPage/IntroSection/IntroSection.module.css
+++ b/components/CareersPage/IntroSection/IntroSection.module.css
@@ -8,7 +8,7 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: var(--space-40) 0 0 0;
+  padding: calc(var(--space-40) * 2) 0 0 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
@@ -19,6 +19,6 @@
     font-family: var(--mantine-font-family);
     font-size: rem(21px);
     line-height: 1.5;
-    color: var(--mantine-color-black);
+    color: var(--blue);
     padding-bottom: var(--mantine-spacing-lg);
   }
