--- a/components/Homepage/Faq/Faq.module.css
+++ b/components/Homepage/Faq/Faq.module.css
@@ -16,6 +16,7 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: var(--space-40) 0;
   }
 }
 
@@ -28,6 +29,9 @@
 .itemTitle {
   font-size: 26px;
   color: var(--blue);
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 18px;
+  }
   > * {
     font-weight: 600 !important;
   }
