--- a/components/Homepage/Feature1/Feature1.module.css
+++ b/components/Homepage/Feature1/Feature1.module.css
@@ -1,6 +1,9 @@
 .inner {
   display: flex;
   justify-content: space-between;
+  @media (max-width: $mantine-breakpoint-md) {
+    flex-direction: column;
+  }
 }
 
 .content {
@@ -22,6 +25,7 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: var(--space-40) 0;
   }
 }
 
@@ -32,12 +36,15 @@
   font-weight: 700;
 
   @media (max-width: $mantine-breakpoint-xs) {
-    font-size: rem(28px);
+    font-size: rem(26px);
   }
 }
 
 .description {
   font-size: 20px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 18px;
+  }
 }
 
 .control {
@@ -54,18 +61,27 @@
   object-fit: contain;
 
   @media (max-width: $mantine-breakpoint-md) {
-    display: none;
+    margin-right: 0;
+    max-width: 100%;
   }
 }
 
 .featureTitle {
   font-size: 18px;
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   color: var(--yellow);
+  margin-left: 5px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 16px;
+  }
 }
 
 .featureDescription {
   font-size: 16px;
   line-height: 1.625;
+  margin-bottom: 10px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 15px;
+  }
 }
