--- a/components/Homepage/Hero/Hero.module.css
+++ b/components/Homepage/Hero/Hero.module.css
@@ -7,6 +7,10 @@
   justify-content: space-between;
   padding-top: calc(var(--space-40) * 3);
   padding-bottom: calc(var(--space-40) * 3);
+  @media (max-width: $mantine-breakpoint-md) {
+    padding-top: var(--space-40);
+    padding-bottom: var(--space-40);
+  }
 }
 
 .content {
@@ -21,7 +25,7 @@
 
 .title {
   color: var(--white);
-  font-size: 5rem;
+  font-size: 4.8rem;
   line-height: 1.2;
   font-weight: 900;
 
@@ -30,10 +34,21 @@
   }
 }
 
+.titleDiv {
+  margin-bottom: 50px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin-bottom: 15px;
+  }
+}
+
 .description {
   font-size: 1.25rem;
   font-weight: 600;
   color: var(--text-gray);
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 1.125rem;
+    margin-bottom: 30px;
+  }
 }
 
 .control {
@@ -64,6 +79,9 @@
 .credit {
   display: flex;
   align-items: end;
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin: 10px 0;
+  }
 }
 
 .creditImage {
@@ -86,4 +104,26 @@
   font-size: 16px;
   font-weight: 600;
   color: var(--white);
+}
+
+.creditDiv {
+  margin-top: 75px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    justify-content: space-evenly;
+  }
+}
+
+.textDiv {
+  @media (max-width: $mantine-breakpoint-xs) {
+    flex-direction: column;
+  }
+}
+
+.divider {
+  @media (max-width: $mantine-breakpoint-xs) {
+    display: none;
+  }
 }
