--- a/components/Homepage/PartnersSection/PartnersSection.module.css
+++ b/components/Homepage/PartnersSection/PartnersSection.module.css
@@ -6,6 +6,9 @@
   background-size: 100%;
   padding-bottom: 146px;
   margin-bottom: -1px !important;
+  @media (max-width: $mantine-breakpoint-xs) {
+    padding-bottom: 75px;
+  }
 }
 
 .card {
@@ -28,6 +31,7 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: var(--space-40) 0;
   }
 }
 
