--- a/components/Homepage/TestimonialSection/TestimonialSection.module.css
+++ b/components/Homepage/TestimonialSection/TestimonialSection.module.css
@@ -6,6 +6,9 @@
   background-size: 100%;
   padding-bottom: 148px;
   margin-bottom: -1px !important;
+  @media (max-width: $mantine-breakpoint-xs) {
+    padding-bottom: 20px;
+  }
 }
 
 .personName {
@@ -26,11 +29,12 @@
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: var(--space-40) 0;
   }
 }
 .description {
   font-family: var(--mantine-font-family);
-  font-size: rem(21px);
+  font-size: 21px;
   line-height: 1.5;
   color: var(--mantine-color-black);
   margin-bottom: var(--mantine-spacing-lg);
@@ -49,6 +53,9 @@
   padding: 0 1rem !important;
   margin: 20px 0 !important;
   font-size: 18px !important;
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 16px !important;
+  }
 }
 
 .testimonialCard {
@@ -57,6 +64,13 @@
   max-height: 250px;
   height: 100%;
   background-color: var(--white);
+  margin-bottom: 40px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    flex-direction: column;
+    height: fit-content;
+    max-height: 100%;
+    padding: 10px;
+  }
 }
 
 .stars {
@@ -72,6 +86,9 @@
 
 .root {
   margin: 0 3.5rem;
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin: 0 1.5rem;
+  }
   .controls {
     top: calc(50% - 100px / 2);
     padding: 0;
@@ -82,13 +99,23 @@
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
+        @media (max-width: $mantine-breakpoint-xs) {
+          width: 50px !important;
+          height: 50px !important;
+        }
       }
     }
     .control:nth-of-type(1) {
       margin-left: -4.5rem;
+      @media (max-width: $mantine-breakpoint-xs) {
+        margin-left: -2.5rem;
+      }
     }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
+      @media (max-width: $mantine-breakpoint-xs) {
+        margin-right: -2.5rem;
+      }
     }
   }
 }
