--- a/components/PricingPage/PriceContainer/PriceContainer.module.css
+++ b/components/PricingPage/PriceContainer/PriceContainer.module.css
@@ -20,10 +20,11 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: var(--space-40) 0 0 0;
+  padding: calc(var(--space-40) * 2) 0 0 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: var(--space-40) 0 0 0;
   }
 }
 
@@ -49,16 +50,19 @@
 
 .cardBox1 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
-  height: 36rem;
-  width: 23rem;
+  height: 40rem;
+  width: 24rem;
   padding-inline: 1.5rem;
   border-radius: 0.7rem 0 0 0.7rem;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  @media (max-width: 755px) {
-    width: 19rem;
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: fit-content;
+    height: fit-content;
+    margin: 0 20px;
+
     border-radius: 0.7rem;
   }
   @media (min-width: 756px) and (max-width: 820px) {
@@ -78,6 +82,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: fit-content;
+    height: fit-content;
+    margin: 0 20px;
+    border-radius: 0.7rem;
+  }
 
   @media (min-width: 756px) and (max-width: 820px) {
     width: 15rem;
@@ -88,15 +98,18 @@
 .cardBox3 {
   box-shadow: 0px 30px 50px -7px rgba(0, 0, 0, 0.1);
   height: 36rem;
-  width: 23rem;
+  width: 24rem;
   padding-inline: 1.5rem;
   border-radius: 0 0.7rem 0.7rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  @media (max-width: 755px) {
-    width: 19rem;
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: fit-content;
+    height: fit-content;
+    margin: 0 20px;
+
     border-radius: 0.7rem;
   }
   @media (min-width: 756px) and (max-width: 820px) {
@@ -123,6 +136,10 @@
   padding: calc(var(--space-40) / 2) 0;
   margin-bottom: calc(var(--space-40) / 2);
   border-radius: var(--border-radius-md);
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin-top: calc(var(--space-40) / 2);
+    margin-bottom: 0;
+  }
 }
 
 .contentTitle {
@@ -134,13 +151,18 @@
   list-style: square;
 }
 
-.featureName {
+.featureName,
+.featureDiv {
   cursor: pointer;
 }
 
 .discount {
   font-weight: 900;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   color: red;
   margin-top: 0.25rem;
+}
+
+.everythingDiv {
+  flex-direction: row;
 }
