--- a/components/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialSection/TestimonialSection.module.css
@@ -1,5 +1,6 @@
 .outer {
   background-color: var(--gray);
+  padding-top: var(--space-40);
 }
 
 .personName {
@@ -7,33 +8,25 @@
   color: var(--mantine-color-black) !important;
   line-height: 1.2 !important;
   font-size: rem(16px) !important;
-  margin: var(--mantine-spacing-xs) 0 0 20px !important;
-}
-
-.quote {
-  font-weight: 900 !important;
-  color: var(--mantine-color-black) !important;
-  line-height: 1.2 !important;
-  font-size: rem(18px) !important;
-  margin: var(--mantine-spacing-xs) 0 0 20px !important;
+  margin: var(--mantine-spacing-sm) 0 0 20px !important;
 }
 
 .mainTitle {
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  font-size: rem(52px);
+  color: var(--blue);
+  font-size: var(--title-font-size);
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  margin: 2rem 0 1rem 0;
+  padding: calc(var(--space-40) * 2) 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
+    padding: var(--space-40) 0;
   }
 }
-
 .description {
   font-family: var(--mantine-font-family);
-  font-size: rem(21px);
+  font-size: 21px;
   line-height: 1.5;
   color: var(--mantine-color-black);
   margin-bottom: var(--mantine-spacing-lg);
@@ -43,8 +36,8 @@
   width: 100%;
   iframe {
     border-radius: 10px;
-    width: 100% !important;
-    height: 100% !important;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -52,14 +45,24 @@
   padding: 0 1rem !important;
   margin: 20px 0 !important;
   font-size: 18px !important;
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 16px !important;
+  }
 }
 
 .testimonialCard {
   display: flex !important;
   padding: 20px;
-  max-height: 250px ;
+  max-height: 250px;
   height: 100%;
   background-color: var(--white);
+  margin-bottom: 40px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    flex-direction: column;
+    height: fit-content;
+    max-height: 100%;
+    padding: 10px;
+  }
 }
 
 .stars {
@@ -74,7 +77,10 @@
 }
 
 .root {
-  margin: 0 3.5rem;
+  margin: 0 3.5rem ;
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin: 0 1.5rem;
+  }
   .controls {
     top: calc(50% - 100px / 2);
     padding: 0;
@@ -85,13 +91,23 @@
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
+        @media (max-width: $mantine-breakpoint-xs) {
+          width: 50px !important;
+          height: 50px !important;
+        }
       }
     }
     .control:nth-of-type(1) {
       margin-left: -4.5rem;
+      @media (max-width: $mantine-breakpoint-xs) {
+        margin-left: -2.5rem;
+      }
     }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
+      @media (max-width: $mantine-breakpoint-xs) {
+        margin-right: -2.5rem;
+      }
     }
   }
 }
