--- a/components/CareersPage/JobsSection/JobsSection.module.css
+++ b/components/CareersPage/JobsSection/JobsSection.module.css
@@ -1,4 +1,4 @@
-.outer{
+.outer {
   background-color: var(--gray);
   padding-bottom: var(--space-40);
 }
@@ -16,6 +16,9 @@
   background-color: var(--yellow);
   border-radius: var(--border-radius-md);
   padding: calc(var(--space-40) / 2);
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: rem(28px);
+  }
 }
 
 .item {
@@ -27,6 +30,9 @@
 .itemTitle {
   font-size: 26px;
   color: var(--blue);
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 22px;
+  }
   > * {
     font-weight: 600 !important;
   }
@@ -76,4 +82,7 @@
 
 .column {
   padding: var(--space-40);
+  @media (max-width: $mantine-breakpoint-xs) {
+    padding:0;
+  }
 }
