--- a/components/OurProcessPage/Step1/Step1.module.css
+++ b/components/OurProcessPage/Step1/Step1.module.css
@@ -13,6 +13,7 @@
 .content {
   max-width: rem(480px);
   align-content: center;
+  text-align: center;
 
   @media (max-width: $mantine-breakpoint-md) {
     max-width: 100%;
@@ -46,9 +47,10 @@
   width: rem(200px);
   height: rem(200px);
   margin: auto;
-
-  @media (max-width: $mantine-breakpoint-md) {
-    display: none;
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: rem(150px);
+    height: rem(150px);
+    margin: auto;
   }
 }
 
