--- a/components/OurProcessPage/Step3/Step3.module.css
+++ b/components/OurProcessPage/Step3/Step3.module.css
@@ -1,6 +1,9 @@
 .outer {
   background-color: var(--gray);
   padding-bottom: calc(var(--space-40) * 2);
+  @media (max-width: $mantine-breakpoint-xs) {
+    padding-bottom: var(--space-40);
+  }
 }
 
 .inner {
@@ -13,6 +16,7 @@
 .content {
   max-width: rem(480px);
   align-content: center;
+  text-align: center;
 
   @media (max-width: $mantine-breakpoint-md) {
     max-width: 100%;
@@ -46,9 +50,10 @@
   width: rem(200px);
   height: rem(200px);
   margin: auto;
-
-  @media (max-width: $mantine-breakpoint-md) {
-    display: none;
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: rem(150px);
+    height: rem(150px);
+    margin: auto;
   }
 }
 
