--- a/components/Homepage/Feature1/Feature1.module.css
+++ b/components/Homepage/Feature1/Feature1.module.css
@@ -42,6 +42,7 @@
 
 .description {
   font-size: 20px;
+  font-style: italic;
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: 18px;
   }
