--- a/components/Homepage/Feature2/Feature2.module.css
+++ b/components/Homepage/Feature2/Feature2.module.css
@@ -43,6 +43,7 @@
 
 .description {
   font-size: 20px;
+  font-style: italic;
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: 18px;
   }
