--- a/components/ContactUsPage/CallUsSection/CallUsSection.module.css
+++ b/components/ContactUsPage/CallUsSection/CallUsSection.module.css
@@ -47,6 +47,10 @@
   @media (max-width: $mantine-breakpoint-xs) {
     margin-bottom: 1rem;
   }
+  a {
+    text-decoration: none;
+    color: var(--white);
+  }
 }
 
 .image {
