--- a/globals.css
+++ b/globals.css
@@ -3,6 +3,7 @@
   --white: #ffffff;
   --gray: #f1f1f1;
   --yellow: #e8a743;
+  --dark-yellow: #c88318;
   --blue: #1f2236;
   --text-gray: #c4c6cd;
   --border-color: #424453;
