--- a/components/CTA-No-Wave/CTA.module.css
+++ b/components/CTA-No-Wave/CTA.module.css
@@ -53,4 +53,9 @@
 
 .control {
   font-size: 23px !important;
+  transition: all 0.3s;
+}
+
+.control:hover {
+  background-color: var(--dark-yellow) !important;
 }
