--- a/components/ContactUsPage/IntroSection/IntroSection.module.css
+++ b/components/ContactUsPage/IntroSection/IntroSection.module.css
@@ -18,7 +18,7 @@
   line-height: 1.2;
   font-weight: 900;
   text-align: center;
-  padding: calc(var(--space-40) * 2) 0 var(--space-40) 0;
+  padding: calc(var(--space-40) * 2) 0 0 0;
 
   @media (max-width: $mantine-breakpoint-xs) {
     font-size: rem(28px);
@@ -39,9 +39,4 @@
   img {
     border-radius: 10px 10px 0 0;
   }
-}
-
-.calendarSection {
-  padding: var(--space-40) 0;
-
 }
