--- a/components/Homepage/Feature2/Feature2.module.css
+++ b/components/Homepage/Feature2/Feature2.module.css
@@ -52,9 +52,14 @@
 .control {
   border-radius: var(--border-radius-sm);
   margin-top: var(--space-40);
+  transition: all 0.3s;
   @media (max-width: $mantine-breakpoint-xs) {
     flex: 1;
   }
+}
+
+.control:hover {
+  background-color: var(--dark-yellow) !important;
 }
 
 .image {
