--- a/components/Homepage/WhoWeServeSection/WhoWeServeSection.module.css
+++ b/components/Homepage/WhoWeServeSection/WhoWeServeSection.module.css
@@ -80,7 +80,10 @@
     .control {
       box-shadow: none;
       opacity: 1;
+      background-color: transparent;
+      border: none;
       svg {
+        transition: all 0.3s;
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
@@ -96,6 +99,11 @@
         margin-left: -2.5rem;
       }
     }
+    .control:hover {
+      svg {
+        stroke: var(--dark-yellow) !important;
+      }
+    }
     .control:nth-of-type(2) {
       margin-right: -4.5rem;
       @media (max-width: $mantine-breakpoint-xs) {
@@ -103,4 +111,12 @@
       }
     }
   }
+}
+
+.button {
+  transition: all 0.3s;
+}
+
+.button:hover {
+  background-color: var(--dark-yellow) !important;
 }
