--- a/components/TestimonialSection/TestimonialSection.module.css
+++ b/components/TestimonialSection/TestimonialSection.module.css
@@ -63,6 +63,9 @@
     max-height: 100%;
     padding: 10px;
   }
+  video {
+    border-radius: 10px;
+  }
 }
 
 .stars {
@@ -77,7 +80,7 @@
 }
 
 .root {
-  margin: 0 3.5rem ;
+  margin: 0 3.5rem;
   @media (max-width: $mantine-breakpoint-xs) {
     margin: 0 1.5rem;
   }
@@ -87,7 +90,10 @@
     .control {
       box-shadow: none;
       opacity: 1;
+      background-color: transparent;
+      border: none;
       svg {
+        transition: all 0.3s;
         width: 100px !important;
         height: 100px !important;
         stroke: var(--yellow);
@@ -101,6 +107,11 @@
       margin-left: -4.5rem;
       @media (max-width: $mantine-breakpoint-xs) {
         margin-left: -2.5rem;
+      }
+    }
+    .control:hover {
+      svg {
+        stroke: var(--dark-yellow) !important;
       }
     }
     .control:nth-of-type(2) {
